# physical-modeling-utilities

./: CMakeLists.txt  CppcheckTargets.cmake  Doxyfile  index.html  physicalmodelingutils-config-build-tree.cmake.in  physicalmodelingutils-config.cmake.in
PhysicalModeling/: CMakeLists.txt  DimensionedQuantities.h  LinearSpring.h  LinearSpringDamper.h  PhysicalModeling.h
doxygen-html/: annotated.html  classes.html  dir_334f52c4f8ef3d9e405ba66a5540be67.html  dir_334f52c4f8ef3d9e405ba66a5540be67_dep.map  dirs.html  files.html  formula.repository  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  main.html  modules.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  tree.html
doxygen-html/d0/d8d/: _dimensioned_quantities_8h.html
doxygen-html/d1/d80/: _linear_spring_damper_8h-source.html
doxygen-html/d1/daa/: _physical_modeling_8h-source.html
doxygen-html/d2/d3d/: class_physical_modeling_1_1_linear_spring_damper.html
doxygen-html/d2/d66/: _physical_modeling_8h.html
doxygen-html/d3/d0f/: namespace_physical_modeling.html
doxygen-html/d3/d51/: namespace_physical_modeling_1_1_dimensioned_quantities_1_1dims.html
doxygen-html/d3/d86/: struct_physical_modeling_1_1_dimensioned_quantities_1_1_internal_1_1divide__dimensions.html
doxygen-html/d3/dd1/: namespace_physical_modeling_1_1_dimensioned_quantities.html  namespace_physical_modeling_1_1_dimensioned_quantities_2a01d4f241de84573eca8c4eccc6c2ca_cgraph.md5  namespace_physical_modeling_1_1_dimensioned_quantities_42e1a58221e77ee909c5ee6e7b37fbc2_cgraph.md5  namespace_physical_modeling_1_1_dimensioned_quantities_b06a8e1b7469f6a986f5fd4e9c0bc723_cgraph.map  namespace_physical_modeling_1_1_dimensioned_quantities_b06a8e1b7469f6a986f5fd4e9c0bc723_cgraph.md5  namespace_physical_modeling_1_1_dimensioned_quantities_ca685af6e100427e270f680fb18b37f0_cgraph.map  namespace_physical_modeling_1_1_dimensioned_quantities_ca685af6e100427e270f680fb18b37f0_cgraph.md5
doxygen-html/d6/d7d/: namespace_physical_modeling_1_1_dimensioned_quantities_1_1_s_i.html
doxygen-html/d6/d7f/: _dimensioned_quantities_8h__dep__incl.map  _dimensioned_quantities_8h__dep__incl.md5
doxygen-html/d6/de0/: struct_physical_modeling_1_1_dimensioned_quantities_1_1_internal_1_1multiply__dimensions.html
doxygen-html/d7/df8/: group__g_dimensioned_quantities.html  group__g_dimensioned_quantities_g2a01d4f241de84573eca8c4eccc6c2ca_cgraph.map  group__g_dimensioned_quantities_g2a01d4f241de84573eca8c4eccc6c2ca_cgraph.md5  group__g_dimensioned_quantities_g42e1a58221e77ee909c5ee6e7b37fbc2_cgraph.map  group__g_dimensioned_quantities_g42e1a58221e77ee909c5ee6e7b37fbc2_cgraph.md5  group__g_dimensioned_quantities_gb06a8e1b7469f6a986f5fd4e9c0bc723_cgraph.md5  group__g_dimensioned_quantities_gca685af6e100427e270f680fb18b37f0_cgraph.map  group__g_dimensioned_quantities_gca685af6e100427e270f680fb18b37f0_cgraph.md5
doxygen-html/d8/d77/: struct_physical_modeling_1_1_dimensioned_quantities_1_1_quantity.html  struct_physical_modeling_1_1_dimensioned_quantities_1_1_quantity_08d69380c8be6a64627c56847bfdbc1a_icgraph.map  struct_physical_modeling_1_1_dimensioned_quantities_1_1_quantity_08d69380c8be6a64627c56847bfdbc1a_icgraph.md5  struct_physical_modeling_1_1_dimensioned_quantities_1_1_quantity_9f3b225d206fd493c69c7d0c9864ad1c_icgraph.map  struct_physical_modeling_1_1_dimensioned_quantities_1_1_quantity_9f3b225d206fd493c69c7d0c9864ad1c_icgraph.md5
doxygen-html/d9/dc7/: struct_physical_modeling_1_1_dimensioned_quantities_1_1_quantity-members.html
doxygen-html/da/d10/: _linear_spring_damper_8h__incl.map  _linear_spring_damper_8h__incl.md5
doxygen-html/da/d27/: _linear_spring_damper_8h.html
doxygen-html/dc/d0a/: _dimensioned_quantities_8h__incl.md5
doxygen-html/dc/d82/: _dimensioned_quantities_8h-source.html
doxygen-html/dc/db2/: namespace_physical_modeling_1_1_dimensioned_quantities_1_1_internal.html
doxygen-html/dc/dd7/: class_physical_modeling_1_1_linear_spring_damper-members.html
doxygen-html/de/d61/: class_physical_modeling_1_1_linear_spring_damper__coll__graph.map  class_physical_modeling_1_1_linear_spring_damper__coll__graph.md5
doxygen-html/df/d83/: group__g_spring_damper_systems.html
doxygen-html/df/da7/: _physical_modeling_8h__incl.map  _physical_modeling_8h__incl.md5
tests/: CMakeLists.txt  test_DimensionedQuantities.cpp  test_PhysicalModeling.cpp
